[tool.poetry]
name = "grover-app"
version = "0.1.0"
description = ""
authors = ["Evandro Chagas Ribeiro da Rosa <evandro@quantuloop.com>"]
readme = "README.md"
packages = [{include = "grover_app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
plotly = "^5.24.0"
ket-lang = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
